--- a/setup.cfg
+++ b/setup.cfg
@@ -23,9 +23,11 @@ install_requires =
     alive_progress==2.4.1
     matplotlib==3.5.2
     numpy==1.21.3
-    tensorflow==2.8.0
+    tensorflow==2.9.0
     tensorflow_datasets==4.5.2
+    tensorflow_recommenders==0.6.0
     wandb==0.12.16
+
 
 [options.packages.find]
 exclude =
