Fixing some typos

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,13 @@ install_requires =
     alive_progress==2.4.1
     matplotlib==3.5.2
     numpy==1.21.3
+    pandas==1.4.2
     tensorflow==2.9.1
     tensorflow_datasets==4.5.2
     tensorflow_recommenders==0.6.0
-    wandb==0.12.16
-
+    wandb==0.12.17
+    fastapi==0.78.0
+    uvicorn==0.17.6
 
 
 [options.packages.find]
