--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,9 @@ cycler==0.11.0
 dill==0.3.4
 docker-pycreds==0.4.0
 fastapi==0.78.0
-flatbuffers==2.0
+flatbuffers==1.12
 fonttools==4.33.3
-gast==0.5.3
+gast==0.4.0
 gitdb==4.0.9
 GitPython==3.1.27
 google-auth==2.6.6
@@ -30,7 +30,7 @@ h5py==3.6.0
 httptools==0.4.0
 idna==3.3
 importlib-metadata==4.11.3
-keras==2.8.0
+keras==2.9.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.2
 libclang==14.0.1
@@ -40,11 +40,12 @@ numpy==1.21.3
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
+pandas==1.4.2
 pathtools==0.1.2
 Pillow==9.1.0
 progressbar2==4.0.0
 promise==2.3
-protobuf==3.20.1
+protobuf==3.19.4
 psutil==5.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -54,6 +55,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-utils==3.2.2
+pytz==2022.1
 PyYAML==6.0
 requests==2.27.1
 requests-oauthlib==1.3.1
@@ -65,17 +67,17 @@ six==1.16.0
 smmap==5.0.0
 sniffio==1.2.0
 starlette==0.19.1
-tensorboard==2.8.0
+tensorboard==2.9.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
+tensorflow==2.9.1
 tensorflow-datasets==4.5.2
+tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.25.0
 tensorflow-metadata==1.8.0
 tensorflow-recommenders==0.6.0
 termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
-theia==0.0.1
 toml==0.10.2
 tqdm==4.64.0
 typing_extensions==4.2.0
