Adding google cloud storage

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ install_requires =
     wandb==0.12.17
     fastapi==0.78.0
     uvicorn==0.17.6
+    google-cloud-storage==1.13.0
 
 
 [options.packages.find]
