--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,8 @@ install_requires =
     wandb==0.12.17
     fastapi==0.78.0
     uvicorn==0.17.6
-    google-cloud-storage==1.13.0
+    google-cloud-storage==2.3.0
+    python-dotenv==0.20.0
 
 
 [options.packages.find]
