--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,10 @@ install_requires =
     uvicorn==0.17.6
     google-cloud-storage==2.3.0
     python-dotenv==0.20.0
+    pandas==1.4.2
+    requests==2.26.0
+    pymongo==4.1.1
+    pydantic==1.8.2
 
 [options.packages.find]
 exclude =
