--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.3
 colorama==0.4.4
 cycler==0.11.0
 dill==0.3.4
+dnspython==2.2.1
 docker-pycreds==0.4.0
 fastapi==0.78.0
 flatbuffers==1.12
@@ -19,10 +20,15 @@ fonttools==4.33.3
 gast==0.4.0
 gitdb==4.0.9
 GitPython==3.1.27
+google-api-core==2.8.1
 google-auth==2.6.6
 google-auth-oauthlib==0.4.6
+google-cloud-core==2.3.0
+google-cloud-storage==2.3.0
+google-crc32c==1.3.0
 google-pasta==0.2.0
-googleapis-common-protos==1.56.1
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.2
 grapheme==0.6.0
 grpcio==1.46.1
 h11==0.13.0
@@ -51,9 +57,11 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.8.0
 pydantic==1.9.0
+pymongo==4.1.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+python-multipart==0.0.5
 python-utils==3.2.2
 pytz==2022.1
 PyYAML==6.0
@@ -78,6 +86,7 @@ tensorflow-metadata==1.8.0
 tensorflow-recommenders==0.6.0
 termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
+theia==0.0.1
 toml==0.10.2
 tqdm==4.64.0
 typing_extensions==4.2.0
