Adding dnspython into requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     requests==2.26.0
     pymongo==4.1.1
     pydantic==1.8.2
+    dnspython==2.2.1
 
 [options.packages.find]
 exclude =
