--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,8 @@ install_requires =
     pymongo==4.1.1
     pydantic==1.8.2
     dnspython==2.2.1
+    python-multipart==0.0.5
+    
 
 [options.packages.find]
 exclude =
